--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -1,22 +1,22 @@
-$grid-columns:            36;
-$border-radius:           .0rem;
-$border-radius-lg:        .0rem;
-$border-radius-sm:        .0rem;
+$grid-columns: 36;
+$border-radius: 0rem;
+$border-radius-lg: 0rem;
+$border-radius-sm: 0rem;
 
 // set theme colors
-$primary:   #4a8cd2;
-$success:   #41b883;
-$dark:      #212121;
-$theme1:    #33a8d1;
+$primary: #4a8cd2;
+$success: #41b883;
+$dark: #212121;
+$theme1: #33a8d1;
 
 $enable-negative-margins: true;
-$navbar-light-color:      $dark;
-$font-size-base:          .85rem;
-$input-btn-padding-x:     1rem;
-$border-radius:           2px;
-$link-color:              $theme1;
+$navbar-light-color: $dark;
+$font-size-base: 0.85rem;
+$input-btn-padding-x: 1rem;
+$border-radius: 2px;
+$link-color: $theme1;
 // $body-color:             #FFF;
-$btn-font-weight:         600;
+$btn-font-weight: 600;
 
 // Finally load bootstrap
 @import 'bootstrap/scss/bootstrap.scss';
@@ -51,10 +51,9 @@ $btn-font-weight:         600;
   display: grid;
   grid-template-rows: [row1-start] var(--navbar-height) 1fr auto;
   grid-template-areas:
-    "navbar"
-    "main"
-    "footer"
-  ;
+    'navbar'
+    'main'
+    'footer';
 
   .main-navbar {
     grid-area: navbar;
@@ -82,7 +81,7 @@ $btn-font-weight:         600;
     grid-area: footer;
     background-color: var(--bg-navbar);
     border-top: 1px solid var(--border-navbar);
-    font-size: .65rem;
+    font-size: 0.65rem;
 
     > .links {
       height: calc(var(--navbar-height) * 1.8);
@@ -100,24 +99,23 @@ $btn-font-weight:         600;
 
     &:hover {
       color: var(--link-color);
-      opacity: .65;
+      opacity: 0.65;
     }
   }
-
 }
 
 .markdown-body {
-  font-size: .85rem !important;
+  font-size: 0.85rem !important;
 }
 
-.navbar-nav  {
+.navbar-nav {
   .nav-menu {
     font-size: 1.4rem !important;
   }
   .dropdown-menu {
     .dropdown-item {
       font-size: 0.75rem;
-      padding: 0.15rem .8rem;
+      padding: 0.15rem 0.8rem;
     }
     .dropdown-divider {
       margin: 0.1rem 0;
@@ -125,16 +123,16 @@ $btn-font-weight:         600;
   }
   .b-nav-dropdown.active {
     a:after {
-      color: #FFF;
+      color: #fff;
     }
     text-decoration: none;
     background-color: #4a8cd2;
   }
   .dropdown-menu-right {
     right: 5px;
-    -webkit-box-shadow: 3px 3px 6px -6px rgba(0,0,0,1);
-    -moz-box-shadow: 3px 3px 6px -6px rgba(0,0,0,1);
-    box-shadow: 3px 3px 6px -6px rgba(0,0,0,1);
+    -webkit-box-shadow: 3px 3px 6px -6px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 3px 3px 6px -6px rgba(0, 0, 0, 1);
+    box-shadow: 3px 3px 6px -6px rgba(0, 0, 0, 1);
   }
 }
 
@@ -181,9 +179,9 @@ pre {
   font-weight: bold !important;
 }
 
-.main-head{
+.main-head {
   height: 150px;
-  background: #FFF;
+  background: #fff;
 }
 
 .sidenav {
@@ -208,28 +206,28 @@ textarea.reason {
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
+  .sidenav {
+    padding-top: 15px;
+  }
 }
 
 @media screen and (max-width: 450px) {
-  .register-form{
+  .register-form {
     margin-top: 10%;
   }
 
   textarea.reason {
     width: 290px;
   }
-
 }
 
 @media screen and (min-width: 450px) {
   textarea.reason {
     width: 380px;
   }
-
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   .main {
     margin-left: 40%;
   }
@@ -238,25 +236,25 @@ textarea.reason {
     width: 600px;
   }
 
-  .sidenav{
+  .sidenav {
     width: 40%;
     position: fixed;
     z-index: 1;
     top: 0;
     left: 0;
   }
-  .register-form{
+  .register-form {
     margin-top: 20%;
   }
 }
 
-.login-main-text{
+.login-main-text {
   margin-top: 20%;
   padding: 60px;
   color: #fff;
 }
 
-.login-main-text h2{
+.login-main-text h2 {
   font-weight: 300;
 }
 
@@ -276,8 +274,8 @@ textarea.reason {
   font-size: 1rem;
 }
 .btn-xs {
-  padding: .05rem .25rem;
-  font-size: .9rem;
+  padding: 0.05rem 0.25rem;
+  font-size: 0.9rem;
 }
 .markdown-guide:hover {
   text-decoration: none !important;
